umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0042_[H_1][N+_3]=[C_2].[O_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
opensmiles_strict:
  success: false
  error:
    error_type: InvalidToken
    message: Invalid token at position 50
