umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0047_N_1C(N(_C=C_1)C)=S.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: MismatchedRingBondDirs
    message: Mismatched ring bond directions at position 12
opensmiles:
  success: false
  error:
    error_type: MismatchedRingBondDirs
    message: Mismatched ring bond directions at position 12
