umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0049_C1CCCC1.C1C=CC=C1.CC_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
opensmiles_strict:
  success: false
  error:
    error_type: InvalidToken
    message: Invalid token at position 24
